# wicket

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.controller  LICENSE  README.md  TEST_STRATEGY_WICKET_STREAM.md  book.toml  justfile  manifest  r5hqvtsmurg3on9kfcjueicjvof4hvfh  wicket.toml
.github/workflows/: build.yml  ci.yml  docs.yml
crates/wicket/: Cargo.toml
crates/wicket-config/: Cargo.toml
crates/wicket-config/src/: lib.rs
crates/wicket-config/tests/: config_e2e.rs
crates/wicket-controller/: Cargo.toml
crates/wicket-controller/src/: leader_election.rs  lib.rs  main.rs
crates/wicket-controller/src/crds/: common.rs  gateway.rs  gateway_class.rs  httproute.rs  mod.rs  referencegrant.rs  tcproute.rs  tlsroute.rs
crates/wicket-controller/src/metrics/: mod.rs
crates/wicket-controller/src/reconcilers/: attachment_planner.rs  config_applier.rs  config_generator.rs  config_planner.rs  context.rs  contracts.rs  gateway.rs  gateway_class.rs  httproute.rs  mod.rs  referencegrant.rs  runtime_applier.rs  runtime_plan.rs  secret.rs  service.rs  status_helpers.rs  store.rs  tcproute.rs  tlsroute.rs
crates/wicket-core/: Cargo.toml
crates/wicket-core/src/: lib.rs  metrics.rs  proxy.rs  routing.rs
crates/wicket-core/tests/: routing_e2e.rs
crates/wicket-sockmap/: Cargo.toml  build.rs
crates/wicket-sockmap/bpf/: sockmap.bpf.c
crates/wicket-sockmap/bpf/include/: common.h  vmlinux.h
crates/wicket-sockmap/src/: error.rs  lib.rs  sockmap_linux.rs  sockmap_noop.rs
crates/wicket-stream/: Cargo.toml
crates/wicket-stream/src/: endpoint.rs  health.rs  lib.rs  listener.rs  metrics.rs  pool.rs  protocol.rs  proxy.rs  router.rs  sni.rs
crates/wicket-stream/tests/: integration.rs
crates/wicket-stream/tests/common/: client_hello.rs  mock_backend.rs  mod.rs  proxy_protocol.rs
crates/wicket-tls/: Cargo.toml  README.md
crates/wicket-tls/src/: cert_manager.rs  cert_store.rs  config.rs  file_watcher.rs  lib.rs  metrics.rs  pem.rs
crates/wicket-tls/src/acme/: cloudflare.rs  mod.rs  storage.rs
crates/wicket/src/: main.rs
crates/wicket/tests/: e2e.rs  upgrade_handoff.rs
crates/wicket/tests/helpers/: http_backend.rs  mod.rs
deploy/: README.md  test.sh
deploy/crds/: gateway.networking.k8s.io_gatewayclasses.yaml  gateway.networking.k8s.io_gateways.yaml  gateway.networking.k8s.io_httproutes.yaml  gateway.networking.k8s.io_referencegrants.yaml  gateway.networking.k8s.io_tcproutes.yaml  gateway.networking.k8s.io_tlsroutes.yaml
deploy/grafana/dashboards/: README.md  wicket-controller.json  wicket-proxy-core.json  wicket-stream.json  wicket-tls.json
deploy/helm/wicket/: Chart.yaml  README.md  values.yaml
deploy/helm/wicket/crds/: wicketproxy.yaml
deploy/helm/wicket/templates/: _helpers.tpl  controller-deployment.yaml  controller-pdb.yaml  controller-prometheusrule.yaml  controller-rbac.yaml  controller-service.yaml  controller-servicemonitor.yaml  gatewayclass.yaml  grafana-dashboard-controller.yaml  grafana-dashboard-proxy.yaml  grafana-dashboard-stream.yaml  grafana-dashboard-tls.yaml  proxy-configmap.yaml  proxy-deployment.yaml  proxy-hpa.yaml  proxy-pdb.yaml  proxy-prometheusrule.yaml  proxy-rbac.yaml  proxy-service.yaml  proxy-servicemonitor.yaml
deploy/k3d/: cluster.yaml
deploy/k8s/: echo.yaml  httpbin.yaml  namespace.yaml  wicket-config.yaml  wicket.yaml
docs/: ADR_KUBE_RS_CONTROLLER_STRATEGY.md  ADR_UNIFIED_TLS_SERVING.md  CONFIGURATION.md  DEPLOYMENT.md  EBPF_INTEGRATION_PLAN.md  FEATURE_CONTRACT_MATRIX.md  FEATURE_CONTRACT_MATRIX.yaml  PERFORMANCE_TUNING.md  SECURITY_AUDIT.md
docs/src/: SUMMARY.md  configuration.md  deployment.md  ebpf-testing.md  feature-contract-matrix.md  introduction.md  performance-tuning.md  tls.md  usage.md
docs/src/adr/: controller-managed-gateway-runtime.md  standalone-graceful-http-binary-upgrades.md  standalone-packaged-filesystem-layout.md  unified-tls-serving.md
packaging/: release.sh
packaging/logrotate/: wicket
packaging/nfpm/: README.md  build-compatible.sh  build.sh  wicket.nfpm.yaml
packaging/nfpm/deb/: preremove.sh
packaging/nfpm/rpm/: postinstall.sh  preinstall.sh  preremove.sh
packaging/smoke/: .gitignore  README.md  install-host-deps.sh  qemu-run.sh  smoke-stream.sh  smoke.sh  user-data.tmpl
packaging/smoke/distros/: oracle.env  ubuntu-26.env  ubuntu.env
packaging/systemd/: wicket-upgrade  wicket.service
scripts/: check_feature_contract.py  conformance-test.sh  smoke-test.sh
src/: config.rs  logging.rs  main.rs  proxy.rs  routing.rs
