[package]
name = "wicket"
version = "0.1.0"
edition = "2021"
description = "A Kubernetes Gateway API implementation and reverse proxy built on Pingora"
license = "Apache-2.0"
repository = "https://github.com/GEverding/wicket"
keywords = ["proxy", "gateway", "kubernetes", "pingora", "reverse-proxy"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Pingora framework
pingora = { version = "0.6", features = ["lb"] }
pingora-core = "0.6"
pingora-proxy = "0.6"
pingora-load-balancing = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Config parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
arc-swap = "1"
http = "1"
bytes = "1"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
