[workspace]
resolver = "2"
members = [
    "crates/wicket",
    "crates/wicket-config",
    "crates/wicket-controller",
    "crates/wicket-core",
    "crates/wicket-sockmap",
    "crates/wicket-stream",
    "crates/wicket-tls",
]
[workspace.package]
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/GEverding/wicket"

[workspace.dependencies]
# Internal crates
wicket-config = { path = "crates/wicket-config" }
wicket-core = { path = "crates/wicket-core" }
wicket-tls = { path = "crates/wicket-tls" }

# eBPF sockmap (optional, Linux only)
wicket-sockmap = { path = "crates/wicket-sockmap" }

# Pingora framework
pingora = { version = "0.8", features = ["lb"] }
pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-http = "0.8"
pingora-load-balancing = "0.8"

# Cloudflare foundations - production-grade service infrastructure
foundations = { version = "3", features = [
    "telemetry",
    "settings",
    "cli",
    "logging",
    "metrics",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# Config parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging / Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Utilities
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
arc-swap = "1"
http = "1"
bytes = "1"
regex = "1"
rand = "0.8"
libc = "0.2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Kubernetes controller (for wicket-controller)
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = "0.8"
futures = "0.3"
serde_json = "1"
serde_yaml = "0.9"
prometheus = "0.13"
lazy_static = "1.4"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = true
codegen-units = 1
strip = true
