[package]
name = "wicket-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parsing for Wicket proxy"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
wicket-tls = { path = "../wicket-tls" }

[dev-dependencies]
tempfile = "3"
