[package]
name = "wicket-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kubernetes Gateway API controller for Wicket"

[[bin]]
name = "wicket-controller"
path = "src/main.rs"

[dependencies]
wicket-config = { workspace = true }
wicket-tls = { workspace = true }

# Kubernetes client and controller runtime
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# JSON schema for CRD generation
schemars = "0.8"

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = "1"
serde_yaml = "0.9"
toml = { workspace = true }

# Logging / Telemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# HTTP server for metrics endpoint
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

# Hashing (config_hash / spec_hash for GatewayRuntimePlan)
sha2 = "0.10"

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["env"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
regex = { workspace = true }

# Hostname lookup for leader election
hostname = "0.4"

# X.509 certificate parsing
x509-parser = "0.16"

# TLS crypto provider
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tokio-test = "0.4"
