[package]
name = "wicket-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core proxy and routing logic for Wicket"

[features]
default = []
# ebpf feature requires the volt submodule: git submodule update --init
# ebpf = ["volt-sockmap"]

[dependencies]
wicket-config = { workspace = true }
wicket-tls = { path = "../wicket-tls" }

# Pingora framework
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-load-balancing = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
anyhow = { workspace = true }
arc-swap = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# eBPF sockmap (optional, Linux only)
# Requires the volt submodule to be initialized: git submodule update --init
# [target.'cfg(target_os = "linux")'.dependencies]
# volt-sockmap = { workspace = true, optional = true }
