[package]
name = "wicket-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core proxy and routing logic for Wicket"

[features]
default = []
ebpf = ["wicket-sockmap"]

[dependencies]
wicket-config = { workspace = true }
wicket-tls = { path = "../wicket-tls" }

# Pingora framework
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-http = { workspace = true }
pingora-load-balancing = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
anyhow = { workspace = true }
arc-swap = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# eBPF sockmap (optional, Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
wicket-sockmap = { workspace = true, optional = true }

[dev-dependencies]
wicket-config = { workspace = true }
tokio = { workspace = true }
