[package]
name = "wicket-sockmap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "eBPF sockmap kernel-level socket redirection for Wicket"

[features]
default = []
embedded-bpf = []

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.24"
libc = "0.2"

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = "0.24"
