[package]
name = "wicket-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "L4 TCP stream proxying for Wicket"

[features]
default = []
# ebpf feature requires the volt submodule: git submodule update --init
# ebpf = ["volt-sockmap"]

[dependencies]
# Workspace crates
wicket-config = { path = "../wicket-config" }

# Async runtime
tokio = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
# Requires the volt submodule to be initialized: git submodule update --init
# volt-sockmap = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
