[package]
name = "wicket-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "L4 TCP stream proxying for Wicket"

[features]
default = []
ebpf = ["volt-sockmap"]

[dependencies]
# Workspace crates
wicket-config = { path = "../wicket-config" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
prometheus = { workspace = true }
lazy_static = { workspace = true }
arc-swap = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
volt-sockmap = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
tokio-util = { workspace = true }
