[package]
name = "wicket"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Kubernetes Gateway API implementation and reverse proxy built on Pingora"
default-run = "wicket"

[[bin]]
name = "wicket"
path = "src/main.rs"

[features]
ebpf = ["wicket-stream/ebpf", "wicket-sockmap"]

[dependencies]
wicket-config = { workspace = true }
wicket-core = { workspace = true }
wicket-stream = { path = "../wicket-stream" }

# Pingora framework
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }

# Cloudflare foundations for production telemetry
foundations = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Logging / Telemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
wicket-sockmap = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
tempfile = "3"
